# svo_museum

./: .gitignore  README.md
api/: .env  Cargo.toml
api/src/: handler.rs  main.rs  model.rs  route.rs
api/src/database/: database_functions.rs  handler.rs  mod.rs  model.rs  struct_functions.rs
api/src/database/model/: database_functions.rs  mod.rs  struct_functions.rs
core/: Cargo.toml  db_password.txt
core/src/: handler.rs  main.rs  model.rs  route.rs
core/src/handler/: form_structures.rs  mod.rs
core/src/handler/model/: mod.rs
core/static/scripts/admin_page/: admin_page.js  admin_page.js.map  admin_page.ts  admin_page_script.js  calendar_script.js  constants.js  constants.js.map  tsconfig.json  websocket-ts.js  websocket_connection.js  websocket_connection.js.map
core/static/scripts/admin_page/objects/: application.js  application.js.map
core/static/scripts/admin_page/ui_objects/: application_board.js  application_board.js.map  calendar.js  calendar.js.map  interface.js.map  popup_window.js  popup_window.js.map  table.js  table.js.map
core/static/scripts/form/: form_script.js  form_script.ts
core/static/styles/admin_page/: applications_board.css  calendar.css  style.css  table.css
core/templates/admin/: calendar.html  index.html
core/templates/body/: header.html
core/templates/form/: form.html  submitted_form.html
core/templates/hello_page/: hello.html
core/templates/main_page/: index.html
core/typescript_files/admin_page/: admin_page.ts  constants.ts  package-lock.json  package.json  tsconfig.json  websocket_connection.ts  websocket_manager.ts
core/typescript_files/admin_page/api/: websocket_manager.ts
core/typescript_files/admin_page/objects/: application.ts
core/typescript_files/admin_page/ui_objects/: application_board.ts  calendar.ts  interface.ts  popup_window.ts  table.ts
database/docker/: docker-compose.yml
database/postgres/init-scripts/: init.sql
typescript_files/admin_page/: admin_page.ts
