[package]
name = "svo_museum_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
compat = "0.0.0"
crate = "0.1.1"
dotenv = "0.15.0"
postgres = "0.19.12"
postgres-openssl = "0.5.2"
postgres-types = { version = "0.2.12", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.4.0"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.16", features = ["array-impls", "js", "with-chrono-0_4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = "1.20.0"
watch = "0.2.3"
