[package]
name = "messanger"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
chrono = "0.4.43"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_html_form = "0.4.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = "1.20.0"

[target.derive.dependencies]
serde = "1.0.228"
